[package]
name = "learn_more_rust"
version = "0.1.0"
authors = ["Bernard Igiri <bernard.igiri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4.0"
glam = "0.9.3"
hashbrown = "0.3"
unicode-segmentation = "1.6.0"
byteorder = "1.3.4"

[dev-dependencies]
float-cmp = "0.8.0"
