[package]
name = "learn_more_rust"
version = "0.1.0"
authors = ["Bernard Igiri <bernard.igiri@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
glam = "0.22.0"
hashbrown = "0.13.2"
unicode-segmentation = "1.6.0"
byteorder = "1.3.4"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
tokio = { version = "1.25.0", features = ["full"] }
unescape = "0.1.0"

[dev-dependencies]
float-cmp = "0.9.0"
